third_party/move/move-compiler-v2/tests/visibility-checker/pack_unpack_structs.exp

Diagnostics:
error: Invalid operation: pack on `D::G` can only be done within module `0x41::D`
   ┌─ tests/visibility-checker/pack_unpack_structs.move:13:16
   │
13 │     public fun foo(): C::T {
   │                ^^^
14 │         C::T {g: G{}}
   │                  --- pack here

error: Invalid operation: pack on `C::T` can only be done within module `0x43::C`
   ┌─ tests/visibility-checker/pack_unpack_structs.move:13:16
   │
13 │     public fun foo(): C::T {
   │                ^^^
14 │         C::T {g: G{}}
   │         ------------- pack here

error: Invalid operation: unpack on `C::T` can only be done within module `0x43::C`
   ┌─ tests/visibility-checker/pack_unpack_structs.move:16:16
   │
16 │     public fun bar(c: C::T) {
   │                ^^^
17 │         let C::T { g } = c;
   │             ---------- unpack here

error: Invalid operation: unpack on `D::G` can only be done within module `0x41::D`
   ┌─ tests/visibility-checker/pack_unpack_structs.move:16:16
   │
16 │     public fun bar(c: C::T) {
   │                ^^^
17 │         let C::T { g } = c;
18 │         let G {} = g;
   │             ---- unpack here

error: Invalid operation: unpack on `C::T` can only be done within module `0x43::C`
   ┌─ tests/visibility-checker/pack_unpack_structs.move:20:16
   │
20 │     public fun bar_ref(c: &C::T) {
   │                ^^^^^^^
21 │         let C::T { g } = c;
   │             ---------- unpack here

error: Invalid operation: unpack on `D::G` can only be done within module `0x41::D`
   ┌─ tests/visibility-checker/pack_unpack_structs.move:20:16
   │
20 │     public fun bar_ref(c: &C::T) {
   │                ^^^^^^^
21 │         let C::T { g } = c;
22 │         let G {} = g;
   │             ---- unpack here
